Fixed some alignment issues on landing page and posts now appear on landing page.

--- a/client/src/components/ExperienceSection/ExperienceSection.css
+++ b/client/src/components/ExperienceSection/ExperienceSection.css
@@ -19,7 +19,7 @@
     text-align: left;
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%);
 }
 
 .experience-section-content-container > * {
