--- a/client/src/components/FeaturedContentSection/FeaturedContentSection.css
+++ b/client/src/components/FeaturedContentSection/FeaturedContentSection.css
@@ -6,26 +6,21 @@
     display: flex;
     justify-content: space-between;
     position: relative;
+    flex-direction: column;
     align-items: center;
     width: var(--home-container-width);
     max-width: var(--home-container-max-width);
     height: var(--featured-section-height); 
 }
 
-.twin-candle-container {
-    background: blue;
-    width: 10vw;
-    height: 50vh;
-}
-
 .dark-room-filter {
     /* display: none; */
     position: absolute;
-    top: 0;
+    top: 20%;
     background-color: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(10px);
     width: 100%;
-    height: 70vh;
+    height: calc(var(--featured-section-height) + 10vh); 
     z-index: 4;
     border-radius: var(--home-container-border-radius)
 }
